header,fonts,img

--- a/app/index.html
+++ b/app/index.html
@@ -18,30 +18,42 @@
 	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
 
 	<!-- Chrome, Firefox OS and Opera -->
-	<meta name="theme-color" content="#000">
+	<meta name="theme-color" content="#33244f">
 	<!-- Windows Phone -->
-	<meta name="msapplication-navbutton-color" content="#000">
+	<meta name="msapplication-navbutton-color" content="#33244f">
 	<!-- iOS Safari -->
-	<meta name="apple-mobile-web-app-status-bar-style" content="#000">
+	<meta name="apple-mobile-web-app-status-bar-style" content="#33244f">
 
-	<style>body { opacity: 0; overflow-x: hidden; } html { background-color: #fff; }</style>
+	<style>body { opacity: 0; overflow-x: hidden; } html { background-color: #33244f; }</style>
 
 </head>
 
 <body>
+	<header class="header">
+		<div class="container">
 
-	<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<h2>
+						Простая 3-х минутная медитация, которая проявит твои денежные блоки<br>
+						и покажет истинную причину твоих проблем с деньгами
+					</h2>
 
-		<div class="row">
-
-			
-			
+					<h1>
+						для тех, кто заботится о своем будущем и хочет увеличить свой доход<br>
+						в два-три раза уже зимой 2017 года
+					</h1>
+				</div>
+			<div class="col-md-5 col-md-offset-1 img-responsive"><img src="img/Man.png" alt=""></div>
+			<div class="col-md-6 form">
+				
+			</div>
+			</div>
 		</div>
+	</header>
 
-	</div>
-	
-	<link rel="stylesheet" href="css/main.min.css">
-	<script src="js/scripts.min.js"></script>
+			<link rel="stylesheet" href="css/main.min.css">
+			<script src="js/scripts.min.js"></script>
 
-</body>
-</html>
+		</body>
+		</html>
