header_form, text

--- a/app/index.html
+++ b/app/index.html
@@ -35,8 +35,10 @@
 			<div class="row">
 				<div class="col-md-12">
 					<h2>
-						Простая 3-х минутная медитация, которая проявит твои денежные блоки<br>
-						и покажет истинную причину твоих проблем с деньгами
+						<span>
+							&nbsp;Простая 3-х минутная медитация, &nbsp;которая&nbsp;проявит&nbsp;твои&nbsp;денежные&nbsp;блоки&nbsp;&nbsp;<br>
+							&nbsp;&nbsp;и&nbsp;покажет&nbsp;истинную&nbsp;причину&nbsp;твоих&nbsp;проблем&nbsp;с&nbsp;деньгами&nbsp;
+						</span>
 					</h2>
 
 					<h1>
@@ -44,16 +46,25 @@
 						в два-три раза уже зимой 2017 года
 					</h1>
 				</div>
-			<div class="col-md-5 col-md-offset-1 img-responsive"><img src="img/Man.png" alt=""></div>
-			<div class="col-md-6 form">
-				
-			</div>
-			</div>
-		</div>
-	</header>
+				<div class="col-md-5 col-md-offset-1 img-responsive">
+					<img src="img/Man.png" alt="">
+				</div>
 
-			<link rel="stylesheet" href="css/main.min.css">
-			<script src="js/scripts.min.js"></script>
+				<div class="col-md-6">
+						<form action="#" class="header_form">
+							<p><span>Заполните форму, чтобы скачать видео и получить в подарок</span><br> 
+								5 книг для прокачки вашей финансовой грамотности в PDF</p>
+								<input type="text" name="name" placeholder="Введите ваше имя">
+								<input type="email" name="email" placeholder="Введите ваш email">
+								<input type="submit" value="Получить видео бесплатно">
+							</form>
+					</div>
+				</div>
+			</div>
+		</header>
 
-		</body>
-		</html>
+		<link rel="stylesheet" href="css/main.min.css">
+		<script src="js/scripts.min.js"></script>
+
+	</body>
+	</html>
