Why_meditation, author

--- a/app/index.html
+++ b/app/index.html
@@ -31,15 +31,14 @@
 <body>
 	<header class="header">
 		<div class="container">
-
 			<div class="row">
 				<div class="col-md-12">
-					<h2>
+					<p class="top_text">
 						<span>
 							&nbsp;Простая 3-х минутная медитация, &nbsp;которая&nbsp;проявит&nbsp;твои&nbsp;денежные&nbsp;блоки&nbsp;&nbsp;<br>
 							&nbsp;&nbsp;и&nbsp;покажет&nbsp;истинную&nbsp;причину&nbsp;твоих&nbsp;проблем&nbsp;с&nbsp;деньгами&nbsp;
 						</span>
-					</h2>
+					</p>
 
 					<h1>
 						для тех, кто заботится о своем будущем и хочет увеличить свой доход<br>
@@ -51,17 +50,59 @@
 				</div>
 
 				<div class="col-md-6">
-						<form action="#" class="header_form">
-							<p><span>Заполните форму, чтобы скачать видео и получить в подарок</span><br> 
-								5 книг для прокачки вашей финансовой грамотности в PDF</p>
-								<input type="text" name="name" placeholder="Введите ваше имя">
-								<input type="email" name="email" placeholder="Введите ваш email">
-								<input type="submit" value="Получить видео бесплатно">
-							</form>
+					<form action="#" class="header_form">
+						<p><span>Заполните форму, чтобы скачать видео и получить в подарок</span><br> 
+							5 книг для прокачки вашей финансовой грамотности в PDF</p>
+							<input type="text" name="name" placeholder="Введите ваше имя">
+							<input type="email" name="email" placeholder="Введите ваш email">
+							<input type="submit" value="Получить видео бесплатно">
+						</form>
 					</div>
 				</div>
 			</div>
 		</header>
+
+		<section class="why_meditation">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<h2>Зачем вам эта медитация?</h2>
+					</div>
+					<div class="col-md-4">
+						<img src="img/1.png" alt="Номер 1">
+						<h3>узнаете</h3>
+						<p>Блоки подсознания,<br>стоящие на пути<br>вашего богатства</p>
+					</div>
+					<div class="col-md-4">
+						<img src="img/2.png" alt="Номер 2">
+						<h3>определите</h3>
+						<p>фронт работ для<br>избавления от блоков</p>
+					</div>
+					<div class="col-md-4">
+						<img src="img/3.png" alt="Номер 3">
+						<h3>начнете</h3>
+						<p>привлекать крупные<br>денежные суммы<br>в вашу жизнь</p>
+					</div>
+					<div class="col-md-12 arrow"></div>
+				</div>
+			</div>
+		</section>
+
+		<article class="author">
+			<div class="container">
+				<div class="row">
+				<div class="col-md-12">
+					<h2>Об авторе</h2>
+				</div>
+					<div class="col-md-4">
+						<img src="img/photo.jpg" alt="">
+					</div>
+					<div class="col-md-8">
+						
+					</div>
+				</div>
+			</div>
+		</article>
 
 		<link rel="stylesheet" href="css/main.min.css">
 		<script src="js/scripts.min.js"></script>
