author_button, text

--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
 				</div>
 
 				<div class="col-md-6">
-					<form action="#" class="header_form">
+					<form action="#" class="form">
 						<p><span>Заполните форму, чтобы скачать видео и получить в подарок</span><br> 
 							5 книг для прокачки вашей финансовой грамотности в PDF</p>
 							<input type="text" name="name" placeholder="Введите ваше имя">
@@ -91,14 +91,29 @@
 		<article class="author">
 			<div class="container">
 				<div class="row">
-				<div class="col-md-12">
-					<h2>Об авторе</h2>
-				</div>
-					<div class="col-md-4">
-						<img src="img/photo.jpg" alt="">
+					<div class="col-md-12">
+						<h2>Немного обо мне</h2>
 					</div>
-					<div class="col-md-8">
-						
+					<div class="col-md-4">
+						<img src="img/photo.jpg" alt="Фото автора">
+					</div>
+					<div class="col-md-7 col-md-offset-1">
+						<p>Меня зовут <b>Горячева Юлия Леонидовна</b>, и я:</p>
+						<ul class="skills">
+							<li>Сертифицированный практих Тета-Хилинга;</li>
+							<li>ученица Рона Орена (Израиль);</li>
+							<li>предприниматель;</li>
+							<li>студент МГИ;</li>
+							<li>автор и создатель коучинга "Настоящая магия денег только в твоей голове".</li>
+						</ul>
+						<h2 class="my_target"><span>Моя цель:</span><br>ликвидация денежной безграмотности людей!</h2>
+						<p>
+							Я хочу, чтобы в моем окружении было как можно больше богатых и счастливых людей. Я готова помогать каждому, кто заботится о своем будущем и хочет увеличить доходы, поэтому даю вам эти полезные материалы абсолютно бесплатно.
+						</p>
+						<form action="#" class="button">
+						<input type="submit" value="Мои сертификаты" class="diplom">
+						<input type="submit" value="Получить видео бесплатно">
+						</form>
 					</div>
 				</div>
 			</div>
